<resources>
    <string name="app_name">GsonTest</string>
    <string name="title">Тестовое задание</string>
    <string name="confirm">Подтвердить</string>
    <string name="idHint">Введите id</string>
    <string name="completed">Выполнено</string>
    <string name="name">Лихолетов Алексей</string>
    <string name="phone">+7 (999) 42-200-42</string>
    <string name="mail">a.liholetoff@yandex.ru</string>
    <string name="summary">Резюме</string>
</resources>
