<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="18sp"
            android:visibility="gone" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvText"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ListView
            android:id="@+id/lvUsers"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:visibility="gone" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/tvImageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="?attr/colorControlHighlight"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <CheckBox
            android:id="@+id/cbComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:visibility="gone" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/clButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <Button
                android:id="@+id/btnConfirm"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintRight_toRightOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                card_view:layout_constraintRight_toLeftOf="@+id/btnConfirm"
                tools:layout_editor_absoluteY="35dp">

                <EditText
                    android:id="@+id/etId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/idHint"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
